# qilbm

./: .gitignore  CMakeLists.txt  README.md  ilbm.desktop  ilbm.json  ilbmextractor.json  make_lookup_tables.py
src/: Color.h  Debug.h  ILBM.cpp  ILBM.h  KILBM.cpp  KILBM.h  MemoryReader.h  Palette.cpp  Palette.h  QILBM.cpp  QILBM.h  Try.h
